Fix label align

--- a/scss/controls/checkboxes.scss
+++ b/scss/controls/checkboxes.scss
@@ -108,7 +108,6 @@ label.coveo-checkbox-label {
   display: inline;
 
   line-height: 16px;
-  vertical-align: middle;
 
   & + label.coveo-checkbox-label {
     margin-top: 5px;
